--- a/assets/css/user_sign_in_up.css
+++ b/assets/css/user_sign_in_up.css
@@ -33,7 +33,7 @@
 }
 
 body {
-  background: linear-gradient(90deg, #C7C5F4, #776BCC);
+  background: linear-gradient(90deg, #c7c5f4, #776bcc);
 }
 
 .container {
@@ -44,11 +44,11 @@ body {
 }
 
 .screen {
-  background: linear-gradient(90deg, #5D54A4, #7C78B8);
+  background: linear-gradient(90deg, #5d54a4, #7c78b8);
   position: relative;
-  min-height: 600px;
+  min-height: 700px;
   width: 360px;
-  box-shadow: 0px 0px 24px #5C5696;
+  box-shadow: 0px 0px 24px #5c5696;
 }
 
 .screen__content {
@@ -76,7 +76,7 @@ body {
 .screen__background__shape1 {
   height: 920px;
   width: 920px;
-  background: #FFF;
+  background: #fff;
   top: -90px;
   right: 120px;
   border-radius: 0 72px 0 0;
@@ -85,7 +85,7 @@ body {
 .screen__background__shape2 {
   height: 220px;
   width: 220px;
-  background: #6C63AC;
+  background: #6c63ac;
   top: -172px;
   right: 0;
   border-radius: 32px;
@@ -94,7 +94,7 @@ body {
 .screen__background__shape3 {
   height: 540px;
   width: 190px;
-  background: linear-gradient(270deg, #5D54A4, #6A679E);
+  background: linear-gradient(270deg, #5d54a4, #6a679e);
   top: -24px;
   right: 0;
   border-radius: 32px;
@@ -103,7 +103,7 @@ body {
 .screen__background__shape4 {
   height: 400px;
   width: 200px;
-  background: #7E7BB9;
+  background: #7e7bb9;
   top: 420px;
   right: 50px;
   border-radius: 60px;
@@ -123,33 +123,33 @@ body {
 .login__icon {
   position: absolute;
   top: 30px;
-  color: #7875B5;
+  color: #7875b5;
 }
 
 .login__input {
   border: none;
-  border-bottom: 2px solid #D1D1D4;
+  border-bottom: 2px solid #d1d1d4;
   background: none;
   padding: 10px;
   padding-left: 24px;
   font-weight: 700;
   width: 75%;
-  transition: .2s;
+  transition: 0.2s;
 }
 
 .login__input:active {
   outline: none;
-  border-bottom-color: #6A679E;
+  border-bottom-color: #6a679e;
 }
 
 .login__input:focus {
   outline: none;
-  border-bottom-color: #6A679E;
+  border-bottom-color: #6a679e;
 }
 
 .login__input:hover {
   outline: none;
-  border-bottom-color: #6A679E;
+  border-bottom-color: #6a679e;
 }
 
 .login__submit {
@@ -158,31 +158,36 @@ body {
   margin-top: 30px;
   padding: 16px 20px;
   border-radius: 26px;
-  border: 1px solid #D4D3E8;
+  border: 1px solid #d4d3e8;
   text-transform: uppercase;
   font-weight: 700;
   display: flex;
   align-items: center;
   width: 100%;
-  color: #4C489D;
-  box-shadow: 0px 2px 2px #5C5696;
+  color: #4c489d;
+  box-shadow: 0px 2px 2px #5c5696;
   cursor: pointer;
-  transition: .2s;
+  transition: 0.2s;
 }
 
 .login__submit:active {
-  border-color: #6A679E;
+  border-color: #6a679e;
   outline: none;
 }
 
 .login__submit:focus {
-  border-color: #6A679E;
+  border-color: #6a679e;
   outline: none;
 }
 
 .login__submit:hover {
-  border-color: #6A679E;
+  border-color: #6a679e;
   outline: none;
+}
+
+.google {
+  margin: auto;
+  max-width: 300px;
 }
 
 .login_header {
@@ -193,5 +198,5 @@ body {
 .button__icon {
   font-size: 24px;
   margin-left: auto;
-  color: #7875B5;
+  color: #7875b5;
 }
