--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -3,8 +3,8 @@
 <div class="container">
 	<div class="screen">
 		<div class="screen__content">
-            <form method="POST" action="/users/create-session" class="login">
-                <h1 class="login_header">Sign In</h1>
+			<form method="POST" action="/users/create-session" class="login">
+				<h1 class="login_header">Sign In</h1>
 				<div class="login__field">
 					<i class="login__icon fas fa-user"></i>
 					<input type="email" class="login__input" placeholder="Email" name="email" required>
@@ -16,9 +16,15 @@
 				<button class="button login__submit">
 					<span class="button__text">Log In Now</span>
 					<i class="button__icon fas fa-chevron-right"></i>
-				</button>				
+				</button>
 			</form>
-            <!-- <div class="social-login">
+			<a href="/users/auth/google">
+				<button class="button login__submit google">
+					<span class="button__text">Google SignIn/SignUp</span>
+					<i class="button__icon fas fa-chevron-right"></i>
+				</button>
+			</a>
+			<!-- <div class="social-login">
 				<h3>log in via</h3>
 				<div class="social-icons">
 					<a href="#" class="social-login__icon fab fa-instagram"></a>
@@ -29,9 +35,9 @@
 		</div>
 		<div class="screen__background">
 			<span class="screen__background__shape screen__background__shape4"></span>
-			<span class="screen__background__shape screen__background__shape3"></span>		
+			<span class="screen__background__shape screen__background__shape3"></span>
 			<span class="screen__background__shape screen__background__shape2"></span>
 			<span class="screen__background__shape screen__background__shape1"></span>
-		</div>		
+		</div>
 	</div>
 </div>
