--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -3,8 +3,8 @@
 <div class="container">
 	<div class="screen">
 		<div class="screen__content">
-            <form method="POST" action="/users/create" class="login">
-                <h1 class="login_header">Sign Up</h1>
+			<form method="POST" action="/users/create" class="login">
+				<h1 class="login_header">Sign Up</h1>
 				<div class="login__field">
 					<i class="login__icon fas fa-user"></i>
 					<input type="text" class="login__input" placeholder="User Name" name="name" required>
@@ -19,19 +19,26 @@
 				</div>
 				<div class="login__field">
 					<i class="login__icon fas fa-lock"></i>
-					<input type="password" class="login__input" placeholder="Confirm Password" name="confirm_password" required>
+					<input type="password" class="login__input" placeholder="Confirm Password" name="confirm_password"
+						required>
 				</div>
 				<button class="button login__submit">
 					<span class="button__text">Sign Up</span>
 					<i class="button__icon fas fa-chevron-right"></i>
-				</button>				
+				</button>
 			</form>
+			<a href="/users/auth/google">
+				<button class="button login__submit google">
+					<span class="button__text">Google SignIn/SignUp</span>
+					<i class="button__icon fas fa-chevron-right"></i>
+				</button>
+			</a>
 		</div>
 		<div class="screen__background">
 			<span class="screen__background__shape screen__background__shape4"></span>
-			<span class="screen__background__shape screen__background__shape3"></span>		
+			<span class="screen__background__shape screen__background__shape3"></span>
 			<span class="screen__background__shape screen__background__shape2"></span>
 			<span class="screen__background__shape screen__background__shape1"></span>
-		</div>		
+		</div>
 	</div>
 </div>
