1.Created the schema of Likes 2.Render the likes as per the like is likeable 3.created the js file to toggleLike 4.also added the likes to the Post array 5.also done the changes in the structure and style 6.also done changes in the posts, comments controller with the likes controller also

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -39,3 +39,11 @@
 
         <%} %>
 </div>
+
+<script src="/js/toggle_likes.js"></script>
+<script>
+    $('.toggle-like-button').each(function () {
+        let self = this;
+        let toggleLike = new ToggleLike(self);
+    });
+</script>
