--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -205,8 +205,36 @@ form #input-submit:hover {
   color: #292929;
 }
 
-.posts .upper i {
+.posts .upper .fa-trash {
   color: #e74c3c;
+}
+
+.posts .upper button {
+  cursor: pointer;
+  outline: 0;
+  color: #aaa;
+  background-color: inherit;
+  border: none;
+  outline: none;
+}
+
+.posts .upper .likes {
+  position: relative;
+}
+
+.posts .upper .likes a span {
+  position: absolute;
+  top: -3px;
+  left: -15px;
+  color: black;
+}
+
+.posts .upper .blue {
+  color: blue;
+}
+
+.posts .upper .btn:focus {
+  outline: none;
 }
 
 .posts li {
