--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -192,8 +192,35 @@ form {
     justify-content: space-between;
     font-weight: bold;
     color: #292929;
-    i {
+    .fa-trash {
       color: #e74c3c;
+    }
+    button {
+      cursor: pointer;
+      outline: 0;
+      color: #aaa;
+      background-color: inherit;
+      border: none;
+      outline: none;
+    }
+    .likes {
+      position: relative;
+      a {
+        span {
+          position: absolute;
+          top: -3px;
+          left: -15px;
+          color: black;
+        }
+      }
+    }
+
+    .blue {
+      color: blue;
+    }
+
+    .btn:focus {
+      outline: none;
     }
   }
   li {
