--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -1,8 +1,22 @@
+<script src="https://use.fontawesome.com/fe459689b4.js"></script>
 <li>
     <div class="upper">
         <p>
             <%= post.content %>
         </p>
+        <div class="likes">
+
+            <a class="toggle-like-button" data-likes="<%=post.likes.length %>"
+                href="/likes/toggle/?id=<%=post._id%>&type=Post">
+                <button class="btn" id="like-<%= post._id %>"><i class="fa fa-thumbs-up fa-lg"
+                        aria-hidden="true"></i></button>
+
+                <span>
+                    <%= post.likes.length %>
+                </span>
+            </a>
+        </div>
+
         <% if(post.user.id==locals.user.id){%>
             <a href="/posts/destroy/<%= post._id %>"><i class="fa-solid fa-trash"></i></a>
             <%} %>
