1.trying to do the friendship Schema 2.add the friends in user but display is an issue

--- a/assets/css/user_sign_in_up.css
+++ b/assets/css/user_sign_in_up.css
@@ -185,6 +185,10 @@ body {
   outline: none;
 }
 
+.login__submit .text-center {
+  margin: auto;
+}
+
 .google {
   margin: auto;
   max-width: 300px;
