--- a/assets/scss/user_sign_in_up.scss
+++ b/assets/scss/user_sign_in_up.scss
@@ -169,6 +169,9 @@ body {
     border-color: $border-color_1;
     outline: none;
   }
+  .text-center {
+    margin: auto;
+  }
 }
 .google {
   margin: auto;
