--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="/css/home.css">
+<link rel="stylesheet" href="/css/chat_box.css">
 <div class="home">
 
     <% if(locals.user){%>
@@ -37,7 +38,9 @@
             </ul>
         </div>
 
-        <%} %>
+        <%- include("_chat_box");%>
+
+            <%} %>
 </div>
 
 <script src="/js/toggle_likes.js"></script>
