--- a/views/_chat_box.ejs
+++ b/views/_chat_box.ejs
@@ -9,29 +9,21 @@
                     </div>
 
 
-                    <div class="ps-container ps-theme-default ps-active-y" id="chat-content"
+                    <div class="ps-container ps-theme-default ps-active-y" id="user-chat-box"
                         style="overflow-y: scroll !important; height:400px !important;">
-                        <div class="media media-chat">
-                            <img class="avatar" src="https://img.icons8.com/color/36/000000/administrator-male.png"
-                                alt="...">
+                        <div class="media media-chat media-chat-reverse self-message">
                             <div class="media-body">
+                                <p>Hiii, I'm good.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="media media-chat other-message">
+                            <div class="media-body ">
                                 <p>Hi</p>
-                                <p>How are you ...???</p>
-                                <p>What are you doing tomorrow?<br> Can we come up a bar?</p>
-                                <p class="meta"><time datetime="2018">23:58</time></p>
                             </div>
                         </div>
 
-                        <div class="media media-meta-day">Today</div>
-
-                        <div class="media media-chat media-chat-reverse">
-                            <div class="media-body">
-                                <p>Hiii, I'm good.</p>
-                                <p>How are you doing?</p>
-                                <p>Long time no see! Tomorrow office. will be free on sunday.</p>
-                                <p class="meta"><time datetime="2018">00:06</time></p>
-                            </div>
-                        </div>
 
 
 
@@ -46,8 +38,9 @@
                     <div class="publisher bt-1 border-light">
                         <img class="avatar avatar-xs"
                             src="https://img.icons8.com/color/36/000000/administrator-male.png" alt="...">
-                        <input class="publisher-input" type="text" placeholder="Write something">
-                        <a class="publisher-btn text-info" href="#" data-abc="true"><i
+                        <input class="publisher-input" id="chat-message-input" type="text"
+                            placeholder="Write something">
+                        <a class="publisher-btn text-info" id="send-message" href="#" data-abc="true"><i
                                 class="fa fa-paper-plane"></i></a>
                     </div>
 
