--- a/assets/scss/chat_box.scss
+++ b/assets/scss/chat_box.scss
@@ -36,6 +36,7 @@ $border-color_2: #f1f2f3;
   }
 }
 .card {
+  min-width: 200px;
   border: 0;
   border-radius: 0px;
   margin-bottom: 30px;
@@ -107,8 +108,6 @@ h4.card-title {
 .media-chat {
   padding-right: 64px;
   margin-bottom: 0;
-  padding-right: 64px;
-  margin-bottom: 0;
   .media-body {
     -webkit-box-flex: initial;
     flex: initial;
@@ -121,11 +120,6 @@ h4.card-title {
       border-radius: 3px;
       font-weight: 100;
       color: $color_4;
-      position: relative;
-      padding: 6px 8px;
-      margin: 4px 0;
-      background-color: $background-color_4;
-      border-radius: 3px;
     }
     p.meta {
       background-color: $background-color_2 !important;
@@ -135,12 +129,6 @@ h4.card-title {
   }
 }
 .media {
-  padding: 16px 12px;
-  -webkit-transition: background-color 0.2s linear;
-  transition: background-color 0.2s linear;
-  padding: 16px 12px;
-  -webkit-transition: background-color 0.2s linear;
-  transition: background-color 0.2s linear;
   padding: 16px 12px;
   -webkit-transition: background-color 0.2s linear;
   transition: background-color 0.2s linear;
@@ -196,7 +184,7 @@ h4.card-title {
 }
 .media-chat.media-chat-reverse {
   padding-right: 12px;
-  padding-left: 64px;
+  padding-left: 114px;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: reverse;
   flex-direction: row-reverse;
