--- a/views/home.ejs
+++ b/views/home.ejs
@@ -40,7 +40,12 @@
 
         <%- include("_chat_box");%>
 
-            <%} %>
+            <%}else{%>
+                <h1 class="block-effect" style="--td: 2.2s">
+                    <div class="block-reveal" style="--bc: #4040bf; --d: .5s">SocialApp</div>
+                    <div class="block-reveal" style="--bc: #bf4060; --d: .9s">NodeJs Project...</div>
+                </h1>
+                <%} %>
 </div>
 
 <script src="/js/toggle_likes.js"></script>
