--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,7 +26,7 @@
         </div>
 
         <div class="friends-list posts">
-            <h1>Friends</h1>
+            <h1>Users</h1>
             <ul>
                 <% for(let u of all_users){%>
                     <li>
